// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate (cjs) basic generates the documentation 1`] = `
"# eslint-plugin-test

<!-- begin auto-generated rules list -->

| Name                           | Description   |
| :----------------------------- | :------------ |
| [no-foo](docs/rules/no-foo.md) | disallow foo. |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (cjs) basic generates the documentation 2`] = `
"# test/no-foo

📝 Disallow foo.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 1`] = `
"# eslint-plugin-test

## Rules

<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | ✅  |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. | ✅  |
| [no-biz](docs/rules/no-biz.md) | Description of no-biz. | ✅  |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 2`] = `
"# test/no-foo

📝 Description of no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 3`] = `
"# test/no-bar

📝 Description of no-bar.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 4`] = `
"# test/no-baz

📝 Description of no-baz.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (cjs) config that extends another config generates the documentation 5`] = `
"# test/no-biz

📝 Description of no-biz.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;
